--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ write_matex2 <- function(x) {
 <!-- badges: end -->
 
 The goal of MatrixAnalysis101 is to ...
-
+Run some elementary matrix algebra proprieties
 ## Installation
 
 You can install the released version of MatrixAnalysis101 from [CRAN](https://CRAN.R-project.org) with:
